--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0"
   }
 }
