--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
     "winston": "^3.17.0"
