--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "razorpay": "^2.9.6",
     "winston": "^3.17.0"
   }
 }
