feat(lecture) : created addLectureToSection feature

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,28 @@
+# Server Configuration
 PORT = 
 NODE_ENV = 
+
+#Client URL (for CORS)
 CLIENT_URL = 
+
+#DB
 MONGO_URL = 
+MONGOOSE_DEBUG = 
+
+#Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME = 
 CLOUDINARY_CLOUD_SECRET = 
 CLOUDINARY_CLOUD_API = 
+
+#JWT Configuration
 ACCESS_TOKEN_EXPIRY = 
 ACCESS_TOKEN_SECRET = 
 REFRESH_TOKEN_EXPIRY =  
 REFRESH_TOKEN_SECRET = 
+
+# media 
+DEFAULT_AVATAR_URL = 
+
+#Razorpay Configuration
+RAZORPAY_KEY_ID = 
+RAZORPAY_KEY_SECRET = 
