--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "razorpay": "^2.9.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   }
 }
